correct bkgnd colour - too similar to scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
   font-family: Poppins, sans-serif;
   font-size: 1rem;
   letter-spacing: .4px;
-  background-color: #f2f2f2;
+  background-color: #fafafa;
 }
 
 .clearfix::after {
