--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -50,7 +50,7 @@ body {
   font-family: Poppins, sans-serif;
   font-size: 1rem;
   letter-spacing: .4px;
-  background-color: darken(#fff, 5%);
+  background-color: darken(#fff, 2%);
 }
 
 .clearfix::after {
